# vestibulares-etl

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/assets/: .gitkeep
data/dataset/: .gitkeep
data/raw/: .gitkeep
schemas/: questao_schema.json
src/: __init__.py  config.py
src/exporters/: __init__.py  export_json.py
src/parsers/: __init__.py  extractor_multimodal.py  image_cropper.py  pdf_render.py
src/scrapers/: __init__.py  enem_scraper.py  fuvest_scraper.py  vunesp_comvest_scraper.py
src/utils/: __init__.py  logger.py
src/validators/: __init__.py  gabarito_matcher.py  models.py
tests/: __init__.py  test_enem_scraper.py  test_export_json.py  test_extractor_multimodal.py  test_fuvest_scraper.py  test_gabarito_matcher.py  test_image_cropper.py  test_initial.py  test_pdf_render.py  test_schema.py  test_vunesp_comvest_scraper.py
